EXL: Fix logo responsive visibility

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -26,7 +26,7 @@
   }
 
   .logo {
-    height: 2.5rem;
+    max-height: 40px;
     width: auto;
   }
 }
